- Fixed header button colours for readability.

--- a/header1/header1.css
+++ b/header1/header1.css
@@ -46,7 +46,7 @@ header {
     text-decoration: none;
     font-size: 1rem;
     border-radius: 10px;
-    color: white;
+    color: #013C58;
     cursor: pointer;
     transition: .4s ease;
 }
@@ -57,6 +57,7 @@ header {
 
 .nav-bar a:hover .top-nav-button {
     background-color: #013C58;
+    color: white;
     transform: scale(1.2);
 }
 
